fix: Fix Parse Error

--- a/src/components/BookMenu/index.module.scss
+++ b/src/components/BookMenu/index.module.scss
@@ -3,7 +3,7 @@
 .container {
   list-style: none;
   border: 1px solid $border-color;
-  min-height: $menu-width;
+  //min-height: $menu-width;
 }
 
 .item {
