--- a/src/themes/utils.scss
+++ b/src/themes/utils.scss
@@ -2,3 +2,5 @@ $base-distance: 20px;
 $primary-color: #00f;
 $border-color:#ccc;
 $menu-width:300px;
+$main-content-color:#333;
+$sub-content-color:#ccc;
