--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import './themes/utils.scss';
 html, body, ul, li {
   margin: 0;
   padding: 0;
@@ -5,7 +6,7 @@ html, body, ul, li {
 
 body {
   font-size: 14px;
-  color: #333;
+  color: $main-content-color;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
