--- a/src/components/TextInput/index.module.scss
+++ b/src/components/TextInput/index.module.scss
@@ -15,6 +15,7 @@
   padding: $base-distance / 2;
   font-weight: bold;
   cursor: pointer;
+  border: 1px solid $border-color;
 
   &:hover {
     color: $primary-color;
