--- a/src/themes/utils.scss
+++ b/src/themes/utils.scss
@@ -1,6 +1,8 @@
 $base-distance: 20px;
-$primary-color: #0fd2fd;
-$border-color: #ccc;
+$primary-color: #1890ff;
+$border-color: #d9d9d9;
 $menu-width: 300px;
-$main-content-color: #333;
-$sub-content-color: #ccc;
+$main-content-color: #000;
+$sub-content-color: #333;
+$menu-active-background: #e6f7ff;
+$box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
